--- a/buildenlights.rc.example
+++ b/buildenlights.rc.example
@@ -1,14 +1,21 @@
-## required: repo owner, repo name, authorization token
+#!/bin/bash
+# shellcheck disable=SC2034
+# ^^^ disable "unused variable" warning
+
+## REQUIRED: repo owner, repo name, authorization token
+##
 REPO_OWNER=Piskvor
 REPO_NAME=buildenlights
 # personal access token, permission "repo"
 # - see https://help.github.com/en/articles/creating-a-personal-access-token-for-the-command-line
 PERSONAL_ACCESS_TOKEN="000000000000000000000000000000000"
 
-# recommended: one or more branches (or other git refs) to watch
+## RECOMMENDED: one or more branches (or other git refs) to watch
+##
 REFS="master develop beta eta/pi feature/some_branch v3.14.1"
 
-## optional: other variables used in buildenlights.sh
+## OPTIONAL: other variables used in buildenlights.sh
+##
 # invoke uhubctl without arguments to find the device ID and location - the provided examples probably won't work for you
 USB_DEVICE_ID="05e3:0608"
 USB_DEVICE_LOCATION="2-1.4"
@@ -18,7 +25,8 @@ USB_PORT_FAILURE="any"
 # delay between API requests
 DELAY_SECONDS="300"
 
-# advanced: network tweaks and fallback proxy
+## INTERMEDIATE: network tweaks and fallback proxy
+##
 # time in seconds to wait for the API response
 #REQUEST_TIMEOUT="20"
 # if the request doesn't return data, retry via proxy (if any)
@@ -26,12 +34,14 @@ DELAY_SECONDS="300"
 # time to wait for the API response when going through proxy - set this to a larger value, as this is already a fallback
 #FALLBACK_PROXY_REQUEST_TIMEOUT="60"
 
-# advanced: if you need to use an executable in a different path, uncomment the following. This is unusual and shouldn't be needed.
+## ADVANCED: if you need to use an executable in a different path, uncomment the following. This is unusual and shouldn't be needed.
+##
 #UHUBCTL=/usr/local/bin/uhubctl.x86
 #CURL=/somewhere/curl
 #JQ=/home/user/bin/jq-latest
 
-# expert: define any of your own success/failure on/off function(s). If defined, they will be used instead of the default.
+## EXPERT: define any of your own success/failure on/off function(s). If defined, they will be used instead of the default.
+##
 #__success_on() {
 #    wall "Good news everyone!"
 #    __uhubctl_call 1 "${USB_PORT_SUCCESS}"
