--- a/buildenlights.rc.example
+++ b/buildenlights.rc.example
@@ -22,13 +22,15 @@ USB_DEVICE_LOCATION="2-1.4"
 # "-" disables this feature, number selects a port, "any" switches all ports on the selected device
 USB_PORT_SUCCESS="-"
 USB_PORT_FAILURE="any"
-# delay between API requests
-DELAY_SECONDS="300"
 
 ## INTERMEDIATE: network tweaks and fallback proxy
 ##
+# delay between iterations
+DELAY_SECONDS="300"
+# delay between requests inside one iteration
+DELAY_BETWEEN_REQUESTS="0"
 # time in seconds to wait for the API response
-#REQUEST_TIMEOUT="20"
+REQUEST_TIMEOUT="5"
 # if the request doesn't return data, retry via proxy (if any)
 #FALLBACK_PROXY="http://proxy.example.com:3128/"
 # time to wait for the API response when going through proxy - set this to a larger value, as this is already a fallback
